--- a/deployment/htmx.yaml
+++ b/deployment/htmx.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
-Description: Basic htmx demo
+Description: Basic htmx users
 Resources:
   HtmxApi:
     Type: AWS::Serverless::Api
